--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,13 @@
-/*# sourceMappingURL=main.css.map */
+.logo {
+  margin: 0 auto;
+  font-size: 32px;
+  font-weight: 700;
+  color: red;
+  padding: 30px;
+}
+
+.link {
+  font-size: 40px;
+  font-weight: bold;
+  color: blue;
+}/*# sourceMappingURL=main.css.map */
