--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,13 @@
     font-weight: 700;
     color:red;
     padding:30px;
-    
 
+
+}
+.logo-text {
+    margin:0 auto;
+    font-size:32px;
+    font-weight: 700;
+    color:green;
+   
 }
