--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@
   font-size: 32px;
   font-weight: 700;
   color: green;
+  padding: 30px;
+  display: block;
+  margin: top 50px;
+  background-color: aquamarine;
+  text-transform: capitalize;
 }
 
 .link {
