--- a/css/main.css
+++ b/css/main.css
@@ -23,4 +23,6 @@
   font-weight: bold;
   color: blue;
   background-color: black;
+  padding: 15px 20px 30px;
+  text-decoration: none;
 }/*# sourceMappingURL=main.css.map */
