--- a/css/main.css
+++ b/css/main.css
@@ -20,4 +20,5 @@
   background-color: black;
   padding: 15px 20px 30px;
   text-decoration: none;
+  font-style: normal;
 }/*# sourceMappingURL=main.css.map */
