--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -17,3 +17,8 @@
     margin: top 50px;
     text-transform: capitalize;
 }
+.adress {
+    margin:10%;
+    font-size:  24px;
+    font-weight: 500;
+}
