--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,9 +1,11 @@
 .link {
 font-size: 40px;
-font-weight: bold;
 color: blue;
 padding: 15px 20px 30px;
 text-decoration: none;
 font-style: normal;
 font-variant: normal;
 }
+.footer h1 {
+    color: pink;
+    }
