--- a/css/main.css
+++ b/css/main.css
@@ -1,37 +1,11 @@
-.logo {
-  margin: 0 auto;
-  font-size: 32px;
-  font-weight: 700;
+.adress {
   color: red;
-  padding: 30px;
+}
+
+.logo {
+  font-size: 32px;
 }
 
 .logo-text {
-  margin: 0 auto;
-  font-size: 32px;
-  font-weight: 700;
-  color: green;
-  padding: 30px;
-  display: block;
-  margin: top 50px;
-  text-transform: capitalize;
-}
-
-.adress {
-  margin: 10%;
-  font-size: 24px;
-  font-weight: 500;
-}
-
-.link {
-  font-size: 40px;
-  color: blue;
-  padding: 15px 20px 30px;
-  text-decoration: none;
-  font-style: normal;
-  font-variant: normal;
-}
-
-.footer h1 {
-  color: pink;
+  font-style: italic;
 }/*# sourceMappingURL=main.css.map */
